# mapmaker

./: README.md  game.py  pyproject.toml
.github/workflows/: publish.yml
coolmapmaker/: __init__.py  engine.py
example/: example_game.py
mapmaker/: __init__.py  engine.py
